# api_statica

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_LOGGING.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  test_output.txt
app/: main.py
app/api/v1/: api.py
app/core/: config.py  deps.py  events.py  exception_handlers.py  exceptions.py  security.py
app/core/middleware/: auth_middleware.py
app/core/security/: __init__.py  hashing.py  jwt.py  oauth2_scheme.py
app/crud/: base.py  contact.py  contact_request.py  role.py  user.py
app/database/: base.py  models.py  session.py
app/domain/: email_protocol.py
app/domain/exceptions/: base.py
app/domain/models/: base.py  contact.py  contact_request.py  role.py  user.py
app/domain/repositories/: base.py  contact_request.py
app/domain/value_objects/: email.py
app/schemas/: contact.py  contact_request.py  role.py  user.py
app/services/: auth_service.py  contact_request_service.py  contact_service.py  email_service.py  role_service.py  user_service.py
fastapi_static_project.egg-info/: PKG-INFO  SOURCES.txt
migrations/: env.py
migrations/versions/: b0ef349d86e1_initial_migration.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_auth.py  test_e2e_contact_requests.py  test_e2e_contacts.py  test_e2e_roles.py  test_e2e_users.py
tests/integration/: conftest.py  test_config.py
tests/unit/: test_fastapi_middleware.py  test_http_protocols.py  test_logging_protocols.py  test_standard_logger.py
(+34 files in other folders)
