[project]
name = "fastapi_static_project"
version = "0.1.0"
description = "A FastAPI project with a static frontend."

[project.optional-dependencies]
test = [
    "pytest-asyncio"
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4  # Mantenido aquí
target-version = "py312"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I", "N", "UP", "ANN", "PYI"]
ignore = []  # ANN101 removed

[tool.ruff.format]
# Use single quotes for string literals.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
